@@ -1,3 +1,7 @@
+2006-07-30  Danilo Šegan  <danilo@gnome.org>
+
+	* modules.py (XmlModules.__init__): Check for maintainer key.
+
 2006-07-21  Danilo Šegan  <danilo@gnome.org>
 
 	* update-stats.py (LocStatistics.check_lang_support): Check if line is non-empty.
